# ShelzysDesigns

./: .env.example  .env.save  .gitignore  .theme-check.yml  AB_TESTING_STRATEGY.md  AUDIT_IMPLEMENTATION.md  CHANGELOG.md  CHECKOUT_MESSAGING_GUIDE.md  CLAUDE.md  CLI_DEPLOYMENT_INSTRUCTIONS.md  CODEBASE_STRUCTURE.md  COMPREHENSIVE_SITE_REVIEW.md  CORPORATE_PORTAL_SPEC.md  CUSTOMER_TAGGING_AUTOMATION.md  CUSTOMIZATION.md  DEPLOY_NOW.sh  DEPLOY_YOUR_STORE.md  DEVELOPER_BRIEF.md  EMAIL_TO_DEVELOPER.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_LOG_PHASE1.md  IMPLEMENTATION_LOG_PHASE2.md  IMPLEMENTATION_LOG_PHASE3.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_QUICK_START.md  INSTALLATION.md  INTEGRATION-GUIDE.md  MONITORING_SETUP.md  NEXT_STEPS.md  ONE_CLICK_SETUP.md  PHOTOGRAPHY_REQUIREMENTS.md  PROFITABILITY_REVIEW.md  PROJECT-SUMMARY.md  PROJECT_SUMMARY.md  QUICK-REFERENCE.md  QUICK_CHECKLIST.md  QUICK_START.md  README 2.md  README.md  RECOMMENDATIONS.md  (+19 more)
DEPLOY-NOW/: CHECKLIST.txt  README.md  START-HERE.md
IMPLEMENTATION/: CHECKLIST.md  LAUNCH-DAY-CHECKLIST.md  QUICK-REFERENCE.md  ROADMAP.md
PASTE-READY/: 00-MASTER-CHECKLIST.txt  01-corporate-collection.txt  02-everyday-collection.txt  03-shipping-policy.txt  (+4 more)
amazon-automation/: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
amazon-automation/.github/workflows/: daily-bid-optimization.yml  daily-review-requests.yml  deploy-campaigns.yml  weekly-listing-sync.yml
amazon-automation/config/: campaigns.json  products.json  settings.json
amazon-automation/scripts/: __init__.py  verify_credentials.py
amazon-automation/src/: __init__.py
amazon-automation/src/api/: __init__.py  advertising_client.py  sp_api_client.py
amazon-automation/src/automation/: __init__.py  bid_optimizer.py  campaign_manager.py  listing_manager.py  order_downloader.py  review_requester.py
amazon-automation/src/utils/: __init__.py  config_loader.py  logger.py  notifications.py
amazon-automation/tests/: __init__.py  test_bid_optimizer.py  test_config_loader.py
(+719 files in other folders)
